--- a/Data_cleaning.Rmd
+++ b/Data_cleaning.Rmd
@@ -1,5 +1,5 @@
 ---
-title: <br>Data Cleaning
+title: "<br> Data Cleaning"
 date: "April 2nd, 2023"
 output:
   rmdformats::downcute: 
@@ -10,7 +10,7 @@ output:
 library(knitr)
 library(rmdformats)
 ## Global options
-options(max.print="75")
+options(max.print=1000)
 knitr::opts_chunk$set(
 	echo = TRUE,
 	message = FALSE,
@@ -86,7 +86,7 @@ tz(all_rides$ended_at)
 
 ## 3.1 Create a variable for the day of week
 
-Part of our analysis will examine which days of the week are most popular with different rider groups. Here we create a variable for the day of the week.
+This analysis will examine which days of the week are most popular with different rider groups. The following code will create a variable for the day of the week.
 
 ```{r}
 weekday_levels <- c('Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 
@@ -97,17 +97,17 @@ all_rides <- all_rides %>%
 
 ## 3.2 Create a variable for the ride duration
 
-With the 'started_at' time and 'ended_at' time, we can calculate an interesting variable for analysis: the duration of each ride.
+With the 'started_at' time and 'ended_at' time, it is possible to calculate an interesting variable for analysis: the duration of each ride.
 
 ```{r}
-#Create ride_length to measure duration of ride
+#Create ride_duration to measure duration of ride
 all_rides <- all_rides %>% 
-  mutate(ride_length = as.duration(started_at%--%ended_at))
+  mutate(ride_duration = as.duration(started_at%--%ended_at))
 ```
 
 ## 3.3 Convert categorical variables to factors
 
-Our data has two categorical variables which can be better analyzed by assigning them as factors, 'rideable_type' and 'member_casual'.
+The data has two categorical variables which can be better analyzed by recasting them as factors, 'rideable_type' and 'member_casual'.
 
 ```{r}
 #Convert 'rideable_type' and 'member_casual' to factors
@@ -118,10 +118,10 @@ all_rides <- all_rides %>%
 ```
 
 # 4. Examine data
-Before we clean our data, we will explore the data to look for errors, blanks, or any values out of range for our analysis.
+Before the cleaning the data, it is examined to identify errors, blanks, or any values out of range for this analysis.
 
 ## 4.1 Examine primary key
-Our data has a primary key, which is the 'ride_id' variable. We will check the integrity of our data by ensuring that each 'ride_id' is unique.
+The data has a primary key, which is the 'ride_id' variable. This code will check the integrity of the data by ensuring that each 'ride_id' is unique.
 
 ```{r}
 #Check if each trip_id is unique
@@ -133,20 +133,20 @@ all_rides %>%
 
 The result, 5,755,694, is equal to the number of rows in all_rides. Each ride_id is unique.
 
-## 4.2 Invalid durations
-[Divvy's data page](https://divvybikes.com/system-data) states that "The data has been processed to remove trips that are taken by staff as they service and inspect the system; and any trips that were below 60 seconds in length (potentially false starts or users trying to re-dock a bike to ensure it was secure)." The analysis observed that the minimum value for the trip duration was less than 60 seconds, and was a negative number. The data contains 118,453 records in which the ride length is under 60 seconds.
+## 4.2 Durations out of expected range
+[Divvy's data page](https://divvybikes.com/system-data) states that "The data has been processed to remove trips that are taken by staff as they service and inspect the system; and any trips that were below 60 seconds in length (potentially false starts or users trying to re-dock a bike to ensure it was secure)." The analysis observed that the minimum value for the trip duration was less than 60 seconds, and was a negative number. The data contain 118,453 records in which the ride length is under 60 seconds.
 
 ```{r}
 #Examine trip lenghts < 60s in duration
 all_rides %>%
-  filter(ride_length<60) %>% 
+  filter(ride_duration<60) %>% 
   summarise(total_count=n(),.groups='drop') %>% 
   arrange(-total_count)
 #118,453 ride_lentgh < 60s
 ```
 
 ## 4.3 Null values
-Our data should be complete, without any blank fields. The following code will count if there are any null values in our data.
+The data should be complete, without any blank fields. The following code will count if there are any null values in our data.
 
 ```{r}
 all_rides %>% 
@@ -155,9 +155,9 @@ all_rides %>%
 
 There are null values in start_station_name, start_station_id, end_station_name, end_station_id, end_lat, and end_lng.
 
-The number of null values for station names and ids is concerning. The nulls in the station variables account for 23.37% of our data. The end latitude and longitude are less concerning, accounting for <0.01% of the data.
+The number of null values for station names and ids is concerning. The nulls in the station variables account for 23.37% of the data. The end latitude and longitude are less concerning, accounting for <0.01% of the data.
 
-In an ideal situation, we could ask others who collect this data why parts of it are missing. For our case study, we will use publicly available information to fill in our understanding of the data.
+In an ideal situation, an analyst could directly ask those who collect the data about null values or other anomalous entries. This case study will use publicly available information to solve data integrity issues.
 
 ### 4.3(a) Null values in end_lat and end_lng
 
@@ -170,24 +170,28 @@ summary(no_end_latlng)
 head(no_end_latlng)
 ```
 
-Micromobility devices, which include bikes and scooters, are not always returned. There are [several documented instances of Divvy bikes found out of place](https://blockclubchicago.org/2022/10/04/how-did-this-chicago-divvy-bike-end-up-in-mexico-its-unclear-but-cant-blame-this-bike-for-heading-south/), some as far as Michoacan, Mexico. Nearly all of these rows have a ride duration of approximately 24 hours. After 24 hours, [Divvy considers a bike to be lost or stolen, and assesses a fee.](https://help.divvybikes.com/hc/en-us/articles/360033123412-My-bike-was-lost-or-stolen) For the purpose of this analysis, we will assume that any trip without an end_lat and end_lng is missing or stolen, and omit those rides from this analysis.
+Micromobility devices, which include bikes and scooters, are not always returned. There are [several documented instances of Divvy bikes found out of place](https://blockclubchicago.org/2022/10/04/how-did-this-chicago-divvy-bike-end-up-in-mexico-its-unclear-but-cant-blame-this-bike-for-heading-south/), some as far as Michoacan, Mexico. Nearly all of these rows have a ride duration of approximately 24 hours. After 24 hours, [Divvy considers a bike to be lost or stolen, and assesses a fee.](https://help.divvybikes.com/hc/en-us/articles/360033123412-My-bike-was-lost-or-stolen) For the purpose of this analysis, rides with null values for both the end_lat and end_lng variables will be considered missing or stolen, and those rides will be omitted from this analysis.
 
 ### 4.3(b) Null station name and id
-Let's examine the station names and ids. If we isolate and analyze these rows, we see that their start and stop latitude and longitude variables are rounded to two place values, as opposed to rides with station names and ids, which continue to four decimal places.
+Records with null values for the start_station_id, start_station_name, end_station_id, and end_station_name were isolated and analyzed. In these records the start_lat and start_lng, or end_lat and end_lng, variables are rounded to two place values, as opposed to rides with station names and ids, which continue to five decimal places.
 ```{r}
 no_station <- all_rides %>% 
   filter(is.na(start_station_name) | is.na(end_station_name))
 
 head(no_station)
+summary(no_station)
 ```
 
-What if these rides do not start or end at a station, because they are not required to? A search of available information finds that in 2020, Divvy began [introducing dockless bikes as part of their system](https://divvybikes.com/explore-chicago/expansion-temp). This would explain why the latitude and longitude are rounded -- to anonymize user data. For the purpose of this analysis, we will assume that rides with null values in the station name and id fields were dockless rides.
+It is possible that these rides do not start or end at a station because they are not required to. A search of available information finds that in 2020, Divvy began [introducing dockless bikes as part of their system](https://divvybikes.com/explore-chicago/expansion-temp). This would help to explain why the latitude and longitude are rounded -- to anonymize user data. Rides with null values in the station name and id variables will be included in the analysis, and the null values will be replaced with the string "No ID" or "No Station". 
+
+While the vast majority of rideable_type without start or end station information are electric bikes, some are docked bikes or classic bikes. While electric bikes are allowed to end their rides outside of a station, classic bikes and docked bikes must be returned to a station. It is possible that the electric bike rides without station information are dockless rides, and the classic and docked bikes without station information were improperly ended. Furthur inspection notes that the maximum for ride duration is 4.11 weeks, well in excess of Cyclistic's 24 hour ride maximum.
+
 
 ## 4.4 Rides over 24 hours
 As discovered in section 4.3(a), Divvy considers any bike lost for more than 24 hours to be lost or stolen. There are 278 rides in our data set with durations greater than 24 hours. For the purpose of this analysis, they will be excluded.
 ```{r}
 all_rides %>% 
-  filter(ride_length >= (24*60*60)) %>%
+  filter(ride_duration >= (24*60*60)) %>%
   filter(!is.na(end_lat) | !is.na(end_lng)) %>% 
   summarize(count=n())
 ```
@@ -196,29 +200,29 @@ all_rides %>%
 After a through exploration of the data, it can be efficiently filtered and cleaned. 
 
 ```{r}
-valid_rides <- all_rides %>% 
-  filter(ride_length >= 60) %>% #Rides < 60s are not valid trips (per Divvy)
-  filter(ride_length < (24*60*60)) %>% #Rides > 24h are lost/stolen
+cleaned_rides <- all_rides %>% 
+  filter(ride_duration >= 60) %>% #Rides < 60s are not valid trips (per Divvy)
+  filter(ride_duration < (24*60*60)) %>% #Rides > 24h are lost/stolen
   filter(!is.na(end_lat) | !is.na(end_lng)) %>%  #Null end position
-  mutate(start_station_name = replace_na(start_station_name, "Dockless")) %>% 
+  mutate(start_station_name = replace_na(start_station_name, "No Station")) %>% 
   mutate(start_station_id = replace_na(start_station_id, "No ID")) %>% 
-  mutate(end_station_name = replace_na(end_station_name, "Dockless")) %>% 
+  mutate(end_station_name = replace_na(end_station_name, "No Station")) %>% 
   mutate(end_station_id = replace_na(end_station_id, "No ID"))
 
-summary(valid_rides)
-str(valid_rides)
+summary(cleaned_rides)
+str(cleaned_rides)
 ```
 
-Our cleaning process removed 124,562 rows from our data set: 118,453 rides were less than 60s, 5,377 rides were greater than 24h, and 5,835 had null values for end_lat and end_lng. There is significant overlap between the latter two categories.
+The cleaning process removed 124,562 rows from our data set: 118,453 rides were less than 60s, 5,377 rides were greater than 24h, and 5,835 had null values for end_lat and end_lng. There is significant overlap between the latter two categories.
 
 # 6. Removing test data found during analysis
 
 During geospatial analysis, a record with out of range data for the start_lat and start_lng was located. Upon further inspection, the start_station_name was identified as "Pawel Bialowas -  Test - PBSC charging station". The following code removes any record with the word "test" in either the start station or end station name.
 
 ```{r}
-# Subset the valid_rides data frame to exclude rows where start_station_name or end_station_name contains "test"
-valid_rides <- valid_rides[!(grepl("test", valid_rides$start_station_name, ignore.case = TRUE) | 
-                             grepl("test", valid_rides$end_station_name, ignore.case = TRUE)),]
+# Subset the cleaned_rides data frame to exclude rows where start_station_name or end_station_name contains "test"
+cleaned_rides <- cleaned_rides[!(grepl("test", cleaned_rides$start_station_name, ignore.case = TRUE) | 
+                             grepl("test", cleaned_rides$end_station_name, ignore.case = TRUE)),]
 
 ```
 
@@ -231,5 +235,5 @@ The following code exports the data as an RDS file for later analysis.
 
 ```{r}
 saveRDS(all_rides,"Data/all_rides.RDS")
-saveRDS(valid_rides, "Data/valid_rides.RDS")
+saveRDS(cleaned_rides, "Data/cleaned_rides.RDS")
 ```
