re-knit RMD with edits
Edited Null values in station information section in cleaning report.
Changed valid_rides to cleaned_rides
Changed ride_length to ride_duration

--- a/Analysis_code.Rmd
+++ b/Analysis_code.Rmd
@@ -1,5 +1,5 @@
 ---
-title: <br> Data Analysis
+title: "<br> Data Analysis"
 date: "April 2nd, 2023"
 output:
   rmdformats::downcute: 
@@ -10,7 +10,7 @@ output:
 library(knitr)
 library(rmdformats)
 ## Global options
-options(max.print="75")
+options(max.print=1000)
 knitr::opts_chunk$set(
 	echo = TRUE,
 	message = FALSE,
